--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 					</div>
 					<div class="navigation-navbar collapsed">
 						<ul class="navigation-bar navigation-bar-left">
-							<li><a href="#hero">Home</a></li>
+							<!-- <li><a href="#hero">Home</a></li>
 							<li><a href="#about">About</a></li>
 							<li><a href="#features">Features</a></li>
 							<li><a href="#product">Prices</a></li>
 							<li><a href="#feedback">Feedback</a></li>
 							<li><a href="#team">Team</a></li>
-							<li><a href="#guarantee">Contacts</a></li>
+							<li><a href="#guarantee">Contacts</a></li>-->
 						</ul>
 						<ul class="navigation-bar navigation-bar-right">
 							<li><a href="register.html">Login</a></li>
