--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 				<div class="footer-content row">
 					<div class="col-sm-4 col-xs-12">
 						<div class="logo-wrapper">
-							<img src="assets/img/logo-white.png" alt="logo">
+							<img src="assets/img/packt/mapt.png" alt="logo" style="max-width:200px">
 						</div>
 						<p class="editContent">Ut enim ad minim veniam, quis nostrud exercitation ullamco. Qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Nisi ut aliquid ex ea commodi consequatur?</p>
 						<p class="editContent"><strong>John Doeson, Founder</strong>.</p>
@@ -422,7 +422,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="copyright">startup.ly 2014. All rights reserved.</div>
+			<div class="copyright">Packt Publishing 2016. All rights reserved.</div>
 		</footer></div><!-- /#page -->
 
 	<!--[if lt IE 9]> <script type="text/javascript" src="assets/js/jquery-1.11.3.min.js?ver=1"></script> <![endif]-->
