--- a/index.html
+++ b/index.html
@@ -382,44 +382,17 @@
 		</div><footer class="footer light-text base-clr-bg">
 			<div class="container">
 				<div class="footer-content row">
-					<div class="col-sm-4 col-xs-12">
-						<div class="logo-wrapper">
-							<img src="assets/img/packt/mapt.png" alt="logo" style="max-width:200px">
-						</div>
-						<p class="editContent">Ut enim ad minim veniam, quis nostrud exercitation ullamco. Qui officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Nisi ut aliquid ex ea commodi consequatur?</p>
-						<p class="editContent"><strong>John Doeson, Founder</strong>.</p>
+					<div class="col-sm-3 col-xs-12">
 					</div>
-					<div class="col-sm-5 social-wrap col-xs-12">
-						<strong class="heading editContent">Social Networks</strong>
-						<ul class="list-inline socials">
-							<li><a href="#"><span class="icon icon-socialmedia-08"></span></a></li>
-							<li><a href="#"><span class="icon icon-socialmedia-09"></span></a></li>
-							<li><a href="#"><span class="icon icon-socialmedia-16"></span></a></li>
-							<li><a href="#"><span class="icon icon-socialmedia-04"></span></a></li>
-						</ul>
-						<ul class="list-inline socials">
-							<li><a href="#"><span class="icon icon-socialmedia-07"></span></a></li>
-							<li><a href="#"><span class="icon icon-socialmedia-16"></span></a></li>
-							<li><a href="#"><span class="icon icon-socialmedia-09"></span></a></li>
-							<li><a href="#"><span class="icon icon-socialmedia-08"></span></a></li>
-						</ul>
+					<div class="col-sm-6 social-wrap col-xs-12">
+						<div class="logo-wrapper">
+							<div class="align-center">
+							<img src="assets/img/packt/mapt.png" alt="logo" style="max-width:200px; margin:0 auto;">
+							</div>
+						</div>
 					</div>
 					<div class="col-sm-3 col-xs-12">
-						<strong class="heading editContent">Our Contacts</strong>
-						<ul class="list-unstyled">
-							<li>
-								<span class="icon icon-chat-messages-14"></span>
-								<a href="mailto:info@startup.ly" class="editContent">info@startup.ly</a>
-							</li>
-							<li>
-								<span class="icon icon-seo-icons-34"></span>
-								<span class="editContent">2901 Marmora road, Glassgow, Seattle, WA 98122-1090</span>
-							</li>
-							<li>
-								<span class="icon icon-seo-icons-17"></span>
-								<span class="editContent">1 - 234-456-7980</span>
-							</li>
-						</ul>
+
 					</div>
 				</div>
 			</div>
